[BACKLOG-16102] - Added a little more width to the select.date-picker-select tags in the globalSapphire.css to prevent clipping of text in the dropdown.

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/sapphire/globalSapphire.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/sapphire/globalSapphire.css
@@ -461,7 +461,7 @@ input[name="REPORT_FORMAT_TYPE"] {
 }
 
 table.recur-pattern-hp select {
-  width: 122px;
+  width: 130px;
 }
 
 table.pentaho-schedule-create,
